--- a/style.css
+++ b/style.css
@@ -80,32 +80,6 @@ li:hover{
     font-size:30px;
 }
 
-.contact-us{
-    padding: 50px;
-    box-shadow: 14px 14px 28px slategray;
-    width: 80%;
-    margin: auto;
-    text-align: center;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    background-color: rgb(211, 211, 231)
-    }
-
-    .message{
-        width: 50%;
-        height: 50px;
-        margin-top: 15px;
-    }
-    
-    .submit-btn{
-    width:10%;
-    padding: 15px;
-    margin-top: 10px;
-    background-color: rgb(125, 125, 219);
-    color: blanchedalmond;
-    border: none;
-    }
-
     .service-container{
         margin-top: 30px;
         width: 100%;
@@ -134,7 +108,7 @@ li:hover{
 
                 .service-card{
                     width: 25%;
-                    height: 650px;
+                    height: 750px;
                     box-shadow: 2px 2px 4px rgb(223, 203, 203);
                     text-align: center;
                     align-items: center;
@@ -152,11 +126,12 @@ li:hover{
 
                         .service-card-btn{
                             padding: 15px 30px;
-                            background-color: rgb(140, 140, 197);
+                            background-color: rgb(6, 166, 240);
                             border: none;
                             color: bisque;
                             font-size: 20px;
-                            font-weight: bolder;
+                            /* font-weight: bolder; */
+                            font-family: 'Times New Roman', Times, serif;
                         }
 
                         a{
@@ -176,27 +151,6 @@ li:hover{
 
 /* DONE */
 
-/* .btn{
-    padding: 15px 30px;
-    border:none;
-    color: white;
-    cursor: pointer;
-} */
-
-/* .hire-btn{
-    background-color: blue;
-}
-
-.project-btn{
-    background-color: black;
-} */
-
-/* .input-box{
-padding: 15px;
-width: 50%;
-margin-top: 10px;
-} */
-
 
 /* @media only screen and (min-width-400px) and (max-width-767px){
 
@@ -209,10 +163,56 @@ margin-top: 10px;
 
 
 
+.features {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin: 30px 0;
+    text-align: center;
+  }
+
+  .features div {
+    flex: 1;
+    padding: 10px;
+    min-width: 200px;
+  }
 
 
+  form{
+    width: 550px;
+    margin: auto;
+  }
+
+  .combine {
+    position: relative;
+    width: 100%;
+  }
+
+  .combine input[type="text"] {
+    width: 100%;
+    padding: 10px 90px 10px 10px;
+    box-sizing: border-box;
+    font-size: 16px;
+    font-family: 'Times New Roman', Times, serif;
+  }
+
+  .combine button {
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 80px;
+    border: none;
+    background-color: #1697e2;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    font-family: 'Times New Roman', Times, serif;
+  }
 
 
-
+body{
+    font-family: 'Times New Roman', Times, serif;
+}
 
         
