--- a/style.css
+++ b/style.css
@@ -2,8 +2,11 @@ nav{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: rgb(175, 190, 212);
-    padding: 10px;
+    background-color: rgb(184, 190, 157);
+    padding: 30px;
+    margin-bottom: 20px;
+    color:black;
+    font-weight: bolder;
 }
 
 .logo-container{
@@ -12,11 +15,13 @@ nav{
 
 .text1{
    padding: 30px 0px;
+   font-size: 40px;
 }
 
 .logo{
     width: 100px;
     padding: 20px;
+    /* border-radius: 250px; */
 }
 
 li{
@@ -73,7 +78,7 @@ li:hover{
   left: 50%;
   transform: translate(-50%, -50%); 
   color: white;
-  font-size: 32px;
+  font-size: 40px;
   font-weight: bold;
   text-shadow: 2px 2px 4px #000;
 }
